--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,9 @@
                 <p>Los blogs son la mejor forma de comprtir información y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora</p>
                 <p>Suscribete y dale like</p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi &#x1F49A
+            </div>
         </div>
     </body>
 </html>
